# PICO_TEMP_SENSOR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm_system.cmake  diagram.json  lwipopts.h  main.cpp  pico_lwip_mqtt.cmake  wokwi.toml
collector/: docker-compose.yml  mosquitto.conf  telegraf.conf
collector/IpBeacon/: BeaconSettings.cs  Dockerfile  IpBeacon.csproj  Program.cs  appsettings.json
hardware/iic/: i2c.h
hardware/network/: network.h
hardware/pico/: pico.h
hardware/stdio/: stdio.h
html/: config.html  status.html
src/: config.h  init.cpp  main_loop.cpp  src.h
src/enviroment_sensor/: enviroment_sensor.cpp  enviroment_sensor.h
src/enviroment_sensor/BME280/: BME280.cpp  BME280.h
src/i2c_display/: I2cDevice.cpp  I2cDevice.h  SSD1306.cpp  SSD1306.h
src/network/: CaptivePortal.cpp  CaptivePortal.h
src/network/access_point/dhcpserver/: DhcpServer.cpp  DhcpServer.h
src/network/access_point/dnsserver/: DnsServer.cpp  DnsServer.h  DnsTable.cpp
src/network/dhcpserver/: DhcpServer.cpp  DhcpServer.h
src/network/dnsserver/: DnsServer.cpp  DnsServer.h  DnsTable.cpp  DnsTable.h
src/network/http_server/: HttpServer.cpp  HttpServer.h
src/network/http_server/Helpers/: HTTPHelper.cpp  HTTPResponseBuilder.cpp  HttpServerHelpers.h
src/network/mqtt_server/: MQTTServer.cpp  MQTTServer.h
src/network/udp_server/: UdpServer.cpp  UdpServer.h
src/network/wifi_service/: WifiService.cpp  WifiService.h
src/spi_display/: OLED13.cpp  OLED13.h
src/spi_display/Config/: DEV_Config.cpp  DEV_Config.h  Debug.h
src/spi_display/Fonts/: fonts.h
src/spi_display/GUI/: GUI_Paint.cpp  GUI_Paint.h
src/spi_display/OLED/: OLED_1in3_c.cpp  OLED_1in3_c.h
tests/: CMakeLists.txt  main.cpp
tests/data/: FormDataExample.h
tests/hardware_mocks/lwip/: tcp.h  upd.cpp  upd.h
tests/hardware_mocks/network/: network.h
tests/mocks/lwip/: tcp.cpp
tests/mocks/network/: network.h
tests/network/http_server/: HttpServerTests.cpp  HttpServerTests.h  http_server_tests.cpp
tools/: html_to_cpp.py  requests_sniffer.py
